# displaystr

./: CHANGELOG.md  Cargo.toml  README.md  release.toml
.github/workflows/: ci.yml
src/: lib.rs
tests/: display.rs  displayr.rs
tests/ui/: malformed_argument.rs  malformed_argument.stderr  missing_string.rs  missing_string.stderr
