[package]
name = "displaystr"
version = "0.1.7"
authors = ["Nik Revenco <pm@nikrev.com>"]
license = "MIT OR Apache-2.0"
rust-version = "1.56"
edition = "2021"
repository = "https://github.com/nik-rev/displaystr"
homepage = "https://github.com/nik-rev/displaystr"
keywords = ["display", "derive"]
description = "An attribute macro for ergonomically implementing the Display trait"

[dependencies]

[lib]
proc-macro = true

[dev-dependencies]
trybuild = "1.0"
displaydoc = "0.2"
thiserror = "2.0"
